# steamdeck-keyboard

./: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  repack-appimage.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  plugin.rs
src-tauri/src/plugin/: steamdeck.rs
