[package]
name = "steamdeck-keyboard"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "virtual_keyboard_pad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gtk = { version = "0.18.2" }
enigo = "0.3.0"
hidapi = "2.6.3"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.27"
env_logger = "0.11.6"
libc = "0.2.172"
signal-hook = "0.3.18"
